# Qt-QrCodeGenerator

./: CMakeLists.txt  Qt-QrCodeGenerator.pri
src/: QrCodeGenerator.cpp  QrCodeGenerator.h
